<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="add_new_food">Add new food item</string>
    <string name="aerobic_workout">Aerobic Workout</string>
    <string name="app_name">SwoleMate</string>
    <string name="cardio">Cardio</string>
    <string name="create_new_workout">Create new workout</string>
    <string name="enter_info_request">Please enter some basic information below:</string>
    <string name="finish">Finish</string>
    <string name="hello_user"></string>
    <string name="workout_name">Workout Name</string>
    <string name="other">Other</string>
    <string name="strength">Strength</string>
    <string name="strength_workout">Strength Workout</string>
    <string name="user_name">Daniel</string>
    <string name="user_height">5&quot; 10&apos;</string>
    <string name="user_weight">185</string>
    <string name="view_eating_habits">View eating habits</string>
    <string name="view_workout_history">View past workouts</string>
    <string name="welcome">Hello and welcome!</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_create_workout">CreateWorkoutActivity</string>
    <string name="title_activity_food_tracking">FoodTrackingActivity</string>
    <string name="title_activity_strength_workout">StrengthWorkoutActivity</string>
    <string name="title_activity_cardio_workout">CardioWorkoutActivity</string>
    <string name="title_activity_custom_workout">CustomWorkoutActivity</string>

</resources>
